import "SyncDependency.proto";
import "QueryInfo.proto";
import "TagInfo.proto";
import "Dependency.proto";
import "NamedTagInfo.proto";
import "ObjectQueryInfo.proto";

option java_outer_classname="InsertCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message InsertCommand {
	optional string key = 1;
	optional int64 requestId = 2;
	optional sint32 updateCallbackId = 3;
	optional sint32 removeCallbackId = 4;
	optional sint32 datasourceUpdatedCallbackId = 5;
	optional bool isAsync = 6;
	optional int32 priority = 7;
	optional int64 absExpiration = 8;
	optional int64 sldExpiration = 9;
	optional bool isResync = 10;
	optional string group = 11;
	optional string subGroup = 12;
	optional int32 flag = 13;
	optional string providerName = 14;
	optional string resyncProviderName = 15;
	optional SyncDependency syncDependency = 16;	
	optional string lockId = 17;
	optional int32 lockAccessType = 18; 
	optional uint64 itemVersion = 19;
	optional QueryInfo queryInfo = 20;
	optional TagInfo tagInfo = 21;	
	optional Dependency dependency = 22;
	repeated bytes data = 23;
	optional NamedTagInfo namedTagInfo = 24;
	optional ObjectQueryInfo objectQueryInfo = 25;		
	optional sint32 updateDataFilter = 27 [default = -1];
	optional sint32 removeDataFilter = 28 [default = -1];
	optional string clientID = 29;
    optional sint32 CallbackType = 30;
}